// Copyright 2021-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package proto3ext;

import "google/protobuf/descriptor.proto";
import "extra/example.proto";
import "google/protobuf/wrappers.proto";

// In proto3, we can only extend options.
extend google.protobuf.FileOptions {
  uint32 uint32_ext = 1001;
  optional uint32 optional_uint32_ext = 1002;
  repeated uint32 packed_uint32_ext = 7003;
  repeated uint32 unpacked_uint32_ext = 7004 [packed = false];
}
